--- a/cd/cloudbuild.yaml
+++ b/cd/cloudbuild.yaml
@@ -5,6 +5,6 @@ steps:
     args:
      - '-c'
      - >
-       gcloud beta deploy releases create rel-$(date +%y%m%d-%s)
+       gcloud deploy releases create rel-$(date +%y%m%d-%s)
        --delivery-pipeline=cloud-deploy-kus
        --region=us-central1  --images=myapp-image=${_TAG_NAME}
